[gd_scene load_steps=20 format=3 uid="uid://bita6dnrj87wq"]

[ext_resource type="Script" uid="uid://dktt53hbh57f5" path="res://actors/character/player_character/player_character.gd" id="1_5dlv1"]
[ext_resource type="Texture2D" uid="uid://btc0385l67exe" path="res://_assets/enemy/placeholder_enemy_spritesheet.png" id="2_6oia8"]
[ext_resource type="Script" uid="uid://d3x6ygbikx1wm" path="res://actors/state_machine/state_machine.gd" id="3_t0tay"]
[ext_resource type="Script" uid="uid://ebmcasvilahp" path="res://actors/state_machine/player_states/player_idle.gd" id="4_6oia8"]
[ext_resource type="Script" uid="uid://plkn7epwt71w" path="res://actors/state_machine/player_states/player_walk.gd" id="4_31ora"]

[sub_resource type="Animation" id="Animation_b1uet"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_pflqk"]
resource_name = "idle_down"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_y0uyn"]
resource_name = "idle_left"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_gv10s"]
resource_name = "idle_right"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_kujp3"]
resource_name = "idle_up"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_pjn5c"]
resource_name = "walk_down"
length = 0.6
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_ry0v3"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_fbroj"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_7ar1o"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b1uet"]
_data = {
&"RESET": SubResource("Animation_b1uet"),
&"idle_down": SubResource("Animation_pflqk"),
&"idle_left": SubResource("Animation_y0uyn"),
&"idle_right": SubResource("Animation_gv10s"),
&"idle_up": SubResource("Animation_kujp3"),
&"walk_down": SubResource("Animation_pjn5c"),
&"walk_left": SubResource("Animation_ry0v3"),
&"walk_right": SubResource("Animation_fbroj"),
&"walk_up": SubResource("Animation_7ar1o")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pflqk"]
size = Vector2(32, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1uet"]
size = Vector2(16, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0cue"]
size = Vector2(398, 224)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6oia8"]
size = Vector2(696.5, 392)

[node name="PlayerCharacter" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 28
motion_mode = 1
script = ExtResource("1_5dlv1")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_6oia8")
offset = Vector2(0, -15)
hframes = 4
vframes = 3
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_b1uet")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
max_polyphony = 5

[node name="AudioListener2D" type="AudioListener2D" parent="."]
unique_name_in_owner = true
process_mode = 1
current = true

[node name="InteractAreaTrigger2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 64
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractAreaTrigger2D"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_pflqk")
debug_color = Color(0.6313726, 0.5568628, 0, 0.1764706)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_b1uet")

[node name="StateMachine" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_t0tay")

[node name="Idle" type="Node2D" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("4_6oia8")

[node name="Walk" type="Node2D" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("4_31ora")

[node name="Talking" type="Node2D" parent="StateMachine"]

[node name="CutScene" type="Node2D" parent="StateMachine"]

[node name="Node2D5" type="Node2D" parent="StateMachine"]

[node name="Node2D6" type="Node2D" parent="StateMachine"]

[node name="PathTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.3, 0.3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D"]
shape = SubResource("RectangleShape2D_b0cue")
debug_color = Color(0.8862745, 0, 0.8039216, 0)

[node name="EnemySpawnTrigger" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySpawnTrigger"]
shape = SubResource("RectangleShape2D_6oia8")
debug_color = Color(1, 0, 0, 0)
